packages/typ/tests/fixtures/diagnostics/0801_polyvar_call_payload_mismatch_05.ml.expected
File "0801_polyvar_call_payload_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0801_polyvar_call_payload_mismatch_05 is not a valid module name.

File "0801_polyvar_call_payload_mismatch_05.ml", line 4, characters 25-29:
4 | let _ = read_epsilon (`A true)
                             ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
