packages/typ/tests/fixtures/diagnostics/0801_polyvar_call_payload_mismatch_05.ml
let read_epsilon : [ `A of int ] -> int = function
  | `A x -> x

let _ = read_epsilon (`A true)
